<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HelpPage"
    app:labelVisibilityMode="labeled">
    <item android:id="@+id/action_one"
        android:title="Home"

        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        app:showAsAction="always" />

    <item android:id="@+id/action_two"
        android:title="Post"
        android:icon="@drawable/ic_post"
        android:orderInCategory="2"
        app:showAsAction="always" />

    <item android:id="@+id/action_three"
        android:title="Profile"

        android:icon="@drawable/ic_profile"
        android:orderInCategory="3"
        app:showAsAction="always" />

    <item android:id="@+id/action_four"
        android:title="Help"
        android:icon="@drawable/ic_help"
        android:orderInCategory="4"
        app:showAsAction="always"
        app:labelVisibilityMode="labeled"
        />
</menu>

